tdf#142546 broken formulas in .FODT files

regression from
    commit 81fe31d2c8977791f9b90ab1da4fbb1a778f87fb
    Date:   Tue Nov 3 18:25:10 2020 +0200
    use fastparser in XMLEmbeddedObjectImportContext

Change-Id: Ib5bae81001ae97c574c078c979484f016c7d4323
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/116664
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>