xmloff/source/core/XMLEmbeddedObjectImportContext.cxx
@@ -135,6 +135,11 @@ void XMLEmbeddedObjectImportContext::SetComponent( Reference< XComponent > const
     xImporter->setTargetDocument( rComp );
 
     xComp = rComp;  // keep ref to component only if there is a handler
+
+    // #i34042: copy namepspace declarations
+    // We created a new instance of XMLImport, so we need to propogate the namespace
+    // declarations to it.
+    pFastHandler->GetNamespaceMap() = GetImport().GetNamespaceMap();
 }
 
 XMLEmbeddedObjectImportContext::XMLEmbeddedObjectImportContext(
